# ONFT

77bit-reveal-transform-smart-contracts-main/: .env.example  .gitignore  .solhint.json  README.md  hardhat.config.ts  package-lock.json  package.json
77bit-reveal-transform-smart-contracts-main/.github/workflows/: format.yml
77bit-reveal-transform-smart-contracts-main/.openzeppelin/: sepolia.json
77bit-reveal-transform-smart-contracts-main/contracts/77bit/: SevenSevenBit.sol
77bit-reveal-transform-smart-contracts-main/contracts/77bit-layerzero/: ONFTSevenSevenBit.sol  ONFTSevenSevenBitProxy.sol
77bit-reveal-transform-smart-contracts-main/contracts/layerzero/: ONFT721.sol  ONFT721Core.sol  ProxyONFT721.sol
77bit-reveal-transform-smart-contracts-main/deploy/: ragnarok-mock.ts  sld-chip-mock.ts
77bit-reveal-transform-smart-contracts-main/tasks/: balance.ts  current-block-number.ts  send-eth.ts
77bit-reveal-transform-smart-contracts-main/test/: ONFTSevenSevenBit.ts  RagnarokTransform.ts  SevenSevenBit.ts
onft-evm/: README.md
onft-evm/contracts/: EvmOnftLockAdapter.sol  MyONFT721.sol  MyONFT721Adapter.sol
solana-LzApp-ONFT-main/: solana-LzApp-ONFT-main.rar
solana-LzApp-ONFT-main/programs/zealot_nft/: Cargo.toml
solana-LzApp-ONFT-main/programs/zealot_nft/src/: lib.rs  onft_msg_codec.rs
solana-LzApp-ONFT-main/programs/zealot_nft/src/instructions/: init_adapter_oft.rs  init_oft.rs  lz_receive.rs  lz_receive_onft.rs  mod.rs  quote_onft.rs  send.rs  send_onft.rs  transfer_admin.rs
solana-LzApp-ONFT-main/programs/zealot_nft/src/state/: mod.rs  onft.rs
(+45 files in other folders)
